2008-03-07  Kjartan Maraas  <kmaraas@gnome.org>

	* daemon/gvfsreadchannel.c,
	* daemon/gvfswritechannel.c:
	Fix format specifiers here.

2008-03-07  Kjartan Maraas  <kmaraas@gnome.org>

	* client/httpuri.c: Remove unused vars.
	* daemon/gvfsbackenddav.c: Remove a couple
	of unused variables.

2008-03-07  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c:
	Initialize error variable to NULL. (#519035)

2008-03-06  David Zeuthen  <davidz@redhat.com>

	* hal/ghalvolumemonitor.c:
	(_g_unix_mount_point_guess_should_display),
	(should_be_hidden_according_to_etc_fstab),
	(should_volume_be_ignored), (should_drive_be_ignored),
	(update_drives), (update_volumes):
	Avoid showing volumes from /etc/fstab if the mount point is one
	that should not be displayed to the user (#520851)

2008-03-07  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c:
	Only ask for common properties and don't use allprop.

2008-03-06  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 
	Correctly set the content types and the icon correclty. (#518679)
	Also don't add the If-None-Matcher header for now since
	early apache versions don't like it. We need to be smart about
	that later.

2008-03-06  Alexander Larsson  <alexl@redhat.com>

        * common/gsysutils.c:
	Include <sys/types.h> also (#520307)

2008-03-06  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
        * daemon/gvfsbackendsmb.c:
	Use g_content_type_get_icon() instead of open
	coding it. Also picks up more icons since
	that has been fixed. (#520742)
	
2008-03-06  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_create),
	(ftp_connection_ensure_data_connection),
	(g_vfs_backend_ftp_pop_connection), (do_mount):
	timeout I/O or g_cond_wait after 30 seconds

2008-03-06  Alexander Larsson  <alexl@redhat.com>

        * common/gsysutils.c:
        * configure.ac:
	Include sys/uio.h if availible (#520307)
