@@ -1,3 +1,9 @@
+2008-03-07  Christian Kellner  <gicmo@gnome.org>
+
+	* daemon/soup-input-stream.c: Since G_SEEK_END is not supported
+	at the moment immediately return FALSE without aborting the
+	the soup message.
+
 2008-03-07  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* daemon/gvfsreadchannel.c,
